FINISHED! final tweaks, answered questions, added a fixed nav with opacity for stretch

--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,8 @@ p {
   background: #F6F6F6;
   width: 100%;
   margin: 0 auto;
+  position: fixed;
+  opacity: 0.9;
 }
 .main-navigation .nav-container {
   height: 100%;
