--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,8 @@
   // max-width: 800px;
   width: 100%;
   margin: 0 auto;
-  // position: fixed;
+  position: fixed;
+  opacity: .9;
 
 
   .nav-container {
@@ -16,8 +17,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-
 
 
     @media @mobile {
@@ -59,7 +58,7 @@
       a:hover {
         // text-decoration: underline;
         font-size: 2.4rem;
-        color:#000;
+        color: #000;
       }
     }
 
